--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<input  placeholder="Confirm Password" name="Password" class="pass" type="password" required="">
 					<span class="icon6"><i class="fa fa-unlock" aria-hidden="true"></i></span><br>
 				
-				<input type="submit" value="sign up">
+				<input type="submit"<a href="https://expo-imc-account.netlify.com/">sign up</a> 
 			</form>
 		</div>
 		<div class="clear"></div>
