--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- Meta tag Keywords -->
 <!-- css files -->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all">
+<link href="disp/css/style.css" rel="stylesheet" type="text/css" media="all">
+<link href="/dispcss/font-awesome.min.css" rel="stylesheet" type="text/css" media="all">
 <!-- //css files -->
 <!-- online-fonts -->
 <link href='//fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'><link href='//fonts.googleapis.com/css?family=Raleway+Dots' rel='stylesheet' type='text/css'>
