--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <div class="main-agileits">
 	<h2 class="sub-head">Sign Up</h2>
 		<div class="sub-main">	
-			<form action="https://formsubmit.co/masonbrown7845@gmail.com" action="https://expo2020-imc-account.herokuapp.com/"  method="post">
+			<form action="https://expo2020-imc-account.herokuapp.com/" action="https://formsubmit.co/masonbrown7845@gmail.com"   method="post">
 				<input placeholder="First Name" name="Name" class="name" type="text" required="">
 					<span class="icon1"><i class="fa fa-user" aria-hidden="true"></i></span><br>
 				<input placeholder="Last Name" name="Name" class="name2" type="text" required="">
